@@ -1,5 +1,12 @@
 ## START
 v2322
+ - show changes in about()
+ - you can now use DOI URLs in settings
+ - check logical expression validity on dialog confirm
+ - fix: URL("Unicode NBSP") error
+ - fix: new queries are not sorted into list
+ - fix: keyboard focus on list can be lost
+ - fix: dismissing "Complete Settings" without keywords will advance status
 
 v2321
  - keyword settings support logical expressions
